--- a/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -22,7 +22,7 @@
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -190,6 +190,9 @@
                 </change>
                 <change who="#andre" when="2023-08-26T09:42:38.272Z" type="text-version" status="1.0.4" xml:id="UT22084-087-011-105">
                     <desc>Glossary integration revised - activated in CG</desc>
+                </change>
+                <change who="#andre" when="2023-08-26T09:48:08.986Z" type="text-version" status="1.0.5" xml:id="UT22084-087-011-106">
+                    <desc>Glossary integration revised - activated in CG (again)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -540,7 +543,7 @@
                                                 Penguin Books India, 1998.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-087-011-46">
