--- a/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
+++ b/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
@@ -26,7 +26,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -200,6 +200,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-08-14T21:31:25.496Z" type="text-version" status="1.0.0" xml:id="UT23703-113-010-251">
                     <desc>First published version</desc>
+                </change>
+                <change who="#andre" when="2023-08-26T10:08:05.141Z" type="text-version" status="1.0.1" xml:id="UT23703-113-010-252">
+                    <desc>Glossary integration revised - activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -591,7 +594,7 @@
                                                 Wisdom Publications, 2021.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT23703-113-010-50">
