--- a/translations/kangyur/placeholders/065-001_toh238-the_sutra_of_the_deliberation_on_the_dharma.xml
+++ b/translations/kangyur/placeholders/065-001_toh238-the_sutra_of_the_deliberation_on_the_dharma.xml
@@ -10,20 +10,22 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadharmasaṅgīti­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos yang dag par sdud pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《法集經》 （大正藏：佛說法集經）</title>
-                <author role="translatorMain" ref="eft:team-33"/>
-                <author role="translatorEng" ref="eft:person-304">David Kittay</author>
-                <consultant role="dharmaMaster" ref="eft:person-199">Lozang Jamspal</consultant>
-                <consultant role="projectManager" ref="eft:person-304">David Kittay</consultant>
-                <editor role="externalReviewer" ref="eft:person-340">Ralph Craig</editor>
-                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
-                <sponsor ref="sponsors.xml#sponsor-184">Lily Xu</sponsor>
+                <author role="translatorMain" xml:id="UT22084-065-001-1">Tibetan Classics Translators Guild of New York</author>
+                <author role="translatorEng" xml:id="UT22084-065-001-2">David Kittay</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-065-001-3">Lozang Jamspal</consultant>
+                <consultant role="projectManager" xml:id="UT22084-065-001-4">David Kittay</consultant>
+                <editor role="externalReviewer" xml:id="UT22084-065-001-5">Ralph H. Craig III</editor>
+                <editor role="projectEditor" xml:id="UT22084-065-001-6">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-065-001-27">Konchog Norbu</editor>
+                <sponsor xml:id="UT22084-065-001-7">Lily Xu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2019</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-065-001"/>
                 <date/>
             </publicationStmt>
@@ -31,10 +33,10 @@
                 <bibl key="toh238" type="text">
                     <ref>Toh 238</ref>
                     <biblScope>vol.65, ff. 1r-99v(pp.1-198)</biblScope>
-                    <author role="translatorTib">t. Mañjuśrīgarbha</author>
-                    <author role="translatorTib">Vijayaśīla</author>
-                    <author role="translatorTib">Śīlendrabodhi</author>
-                    <author role="translatorTib">ye shes sde</author>
+                    <author role="translatorTib" xml:id="UT22084-065-001-28">t. Mañjuśrīgarbha</author>
+                    <author role="translatorTib" xml:id="UT22084-065-001-29">Vijayaśīla</author>
+                    <author role="translatorTib" xml:id="UT22084-065-001-30">Śīlendrabodhi</author>
+                    <author role="translatorTib" xml:id="UT22084-065-001-31">ye shes sde</author>
                     <location work="UT4CZ5369" count-pages="197">
                         <volume number="65" start-page="2" end-page="198"/>
                     </location>
@@ -42,20 +44,57 @@
                     <idno source-id="O1JC114941JC11886" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-16T13:31:05.978Z" user="admin">16/01/2023 13:31:05</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2020-09-09T12:03:30.805Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-09T12:03:30.805Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-09-09T12:18:02.242Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2020-09-09T12:18:02.242Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2020-12-01T09:22:10.588Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2020-12-01T09:22:10.588Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-14T08:39:53.848Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2021-09-14T08:40:18.75Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-26T07:00:54.312Z" user="cabie-sim">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-16T13:31:00.377Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-065-001-8">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2020-09-09T12:03:30.805Z" type="translation-status" status="2.g" xml:id="UT22084-065-001-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2020-09-09T12:03:30.805Z" type="text-version" status="0.0.2" xml:id="UT22084-065-001-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-09-09T12:18:02.242Z" type="translation-status" status="2.h" xml:id="UT22084-065-001-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2020-09-09T12:18:02.242Z" type="text-version" status="0.0.3" xml:id="UT22084-065-001-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-12-01T09:22:10.588Z" type="translation-status" status="2.g" xml:id="UT22084-065-001-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2020-12-01T09:22:10.588Z" type="text-version" status="0.0.4" xml:id="UT22084-065-001-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-14T08:39:53.848Z" type="text-version" status="0.0.5" xml:id="UT22084-065-001-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-14T08:40:18.75Z" type="text-version" status="0.0.6" xml:id="UT22084-065-001-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T07:00:54.312Z" type="text-version" status="0.0.7" xml:id="UT22084-065-001-17">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-16T13:31:00.377Z" type="text-version" status="0.0.8" xml:id="UT22084-065-001-18">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-14T13:39:37.391Z" type="text-version" status="0.0.9" xml:id="UT22084-065-001-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.10" xml:id="UT22084-065-001-20">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-28T12:52:50.267Z" type="text-version" status="0.0.11" xml:id="UT22084-065-001-32">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-28T12:53:45.619Z" type="translation-status" status="2.e" xml:id="UT22084-065-001-33">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-28T12:53:45.619Z" type="text-version" status="0.0.12" xml:id="UT22084-065-001-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
