--- a/translations/kangyur/translations/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
+++ b/translations/kangyur/translations/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-016-131">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -40,7 +40,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -180,6 +180,12 @@
                 </change>
                 <change who="#martina-cotter" when="2023-08-29T12:07:08.715Z" type="text-version" status="1.0.0" xml:id="UT22084-034-016-133">
                     <desc>First published version</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-08-29T12:07:36.562Z" type="translation-status" status="1.a" xml:id="UT22084-034-016-134">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-08-29T12:07:36.562Z" type="text-version" status="1.0.1" xml:id="UT22084-034-016-135">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
