--- a/translations/kangyur/translations/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
+++ b/translations/kangyur/translations/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-016-131">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -186,6 +186,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-08-29T12:07:36.562Z" type="text-version" status="1.0.1" xml:id="UT22084-034-016-135">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-08-29T12:08:37.411Z" type="text-version" status="1.0.2" xml:id="UT22084-034-016-136">
+                    <desc>First published version</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
