--- a/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
+++ b/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
@@ -10,22 +10,23 @@
                 <title type="mainTitle" xml:lang="zh">《幻師仁賢授記經》(大正藏:《大寶積經授幻師跋陀羅記會第二十一》</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabhadra­māyākaravyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgyu ma mkhan bzang po lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-39"/>
-                <author role="translatorEng" ref="eft:person-95">Celso Wilkinson</author>
-                <author role="translatorEng" ref="eft:person-92">Laura Goetz</author>
-                <author role="translatorEng" ref="eft:person-318">Damchoe Wangmo, Lopon</author>
-                <consultant role="advisor" ref="eft:person-97">William Giddings</consultant>
-                <consultant role="advisor" ref="eft:person-96">L.S. Summer</consultant>
-                <consultant role="projectManager" ref="eft:person-95">Celso Wilkinson</consultant>
-                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
-                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <author role="translatorMain" xml:id="UT22084-043-002-1"/>
+                <author role="translatorEng" xml:id="UT22084-043-002-2">Celso Wilkinson</author>
+                <author role="translatorEng" xml:id="UT22084-043-002-3">Laura Goetz</author>
+                <author role="translatorEng" xml:id="UT22084-043-002-4">Damchoe Wangmo, Lopon</author>
+                <consultant role="advisor" xml:id="UT22084-043-002-5">William Giddings</consultant>
+                <consultant role="advisor" xml:id="UT22084-043-002-6">L.S. Summer</consultant>
+                <consultant role="projectManager" xml:id="UT22084-043-002-7">Celso Wilkinson</consultant>
+                <editor role="projectEditor" xml:id="UT22084-043-002-8">Nathaniel Rich</editor>
+                <editor role="associateEditor" xml:id="UT22084-043-002-9">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.5 <date>2019</date>
+                <edition>v 0.1.7 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-043-002"/>
                 <date/>
             </publicationStmt>
@@ -40,19 +41,48 @@
                     <idno source-id="O1JC114941JC11601" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-17T11:25:38.791Z" user="admin">17/07/2023 11:25:38</note>
-                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:42:32.43Z" user="john">v 0.1.0</note>
-                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:42:32.43Z" user="john">3</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-08-06T12:46:12.185Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.1.1" date-time="2021-08-06T12:46:12.185Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.2" date-time="2023-02-10T13:05:26.536Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-04-20T09:50:15.751Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2023-04-20T09:50:15.751Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.4" date-time="2023-04-20T09:50:51.916Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-07-17T11:25:34.524Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.1.5" date-time="2023-07-17T11:25:34.524Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2019-12-13T10:42:32.43Z" type="text-version" status="v 0.1.0" xml:id="UT22084-043-002-10">
+                    <desc>v 0.1.0</desc>
+                </change>
+                <change who="#john" when="2019-12-13T10:42:32.43Z" type="translation-status" status="3" xml:id="UT22084-043-002-11">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-06T12:46:12.185Z" type="translation-status" status="2.h" xml:id="UT22084-043-002-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-06T12:46:12.185Z" type="text-version" status="0.1.1" xml:id="UT22084-043-002-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#amy" when="2023-02-10T13:05:26.536Z" type="text-version" status="0.1.2" xml:id="UT22084-043-002-14">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-20T09:50:15.751Z" type="translation-status" status="2.g" xml:id="UT22084-043-002-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-20T09:50:15.751Z" type="text-version" status="0.1.3" xml:id="UT22084-043-002-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-20T09:50:51.916Z" type="text-version" status="0.1.4" xml:id="UT22084-043-002-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T11:25:34.524Z" type="translation-status" status="2.f" xml:id="UT22084-043-002-18">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T11:25:34.524Z" type="text-version" status="0.1.5" xml:id="UT22084-043-002-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.1.6" xml:id="UT22084-043-002-20">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-29T13:55:38.367Z" type="translation-status" status="2.e" xml:id="UT22084-043-002-21">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-29T13:55:38.367Z" type="text-version" status="0.1.7" xml:id="UT22084-043-002-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
