--- a/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
+++ b/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
@@ -13,7 +13,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dpal chen mo'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahālakṣmīsūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="4"/>
                 <idno xml:id="UT22084-094-017"/>
             </publicationStmt>
             <sourceDesc>
@@ -36,9 +37,19 @@
                     <idno source-id="O1JC114941JC12768" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:32 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-094-017-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-29T14:48:18.521Z" type="translation-status" status="4" xml:id="UT22084-094-017-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-29T14:48:18.521Z" type="text-version" status="0.0.1" xml:id="UT22084-094-017-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
