--- a/translations/kangyur/placeholders/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
+++ b/translations/kangyur/placeholders/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
@@ -9,18 +9,20 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">bad sa'i rgyal po 'char byed kyis zhus pa'i le'u/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryodayanavatsarāja­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bad sa'i rgyal po 'char byed kyis zhus pa zhes bya ba'i le'u</title>
-                <author role="translatorMain" ref="eft:team-49"/>
-                <author role="translatorEng" ref="eft:person-60">Benjamin Ewing</author>
-                <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
-                <consultant role="projectManager" ref="eft:person-60">Benjamin Ewing</consultant>
-                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
+                <author role="translatorMain" xml:id="UT22084-043-010-1"/>
+                <author role="translatorEng" xml:id="UT22084-043-010-2">Benjamin Ewing</author>
+                <author role="translatorEng" xml:id="UT22084-043-010-3">Lowell Cook</author>
+                <consultant role="projectManager" xml:id="UT22084-043-010-4">Benjamin Ewing</consultant>
+                <editor role="projectEditor" xml:id="UT22084-043-010-5">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-043-010-6">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.8 <date>2019</date>
+                <edition>v 0.1.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-043-010"/>
                 <date/>
             </publicationStmt>
@@ -35,25 +37,69 @@
                     <idno source-id="O1JC114941JC11613" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-29T09:54:41.033Z" user="admin">29/06/2023 09:54:41</note>
-                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:19:48.982Z" user="john">v 0.1.0</note>
-                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:19:48.982Z" user="john">3</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-05-11T08:48:24.545Z" user="line-tofte">2.h</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2020-10-09T14:35:26.862Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.1.1" date-time="2020-10-09T14:35:26.862Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.2" date-time="2020-10-09T14:37:03.558Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-02-05T07:22:22.143Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2021-02-05T07:22:22.143Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.4" date-time="2021-02-05T07:22:50.913Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-06-30T11:54:15.672Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.1.5" date-time="2022-06-30T11:54:15.672Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.6" date-time="2022-06-30T12:15:08.691Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-13T08:26:08.501Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.1.7" date-time="2023-03-13T08:26:08.501Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-06-29T09:54:36.711Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.1.8" date-time="2023-06-29T09:54:36.711Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2019-12-13T10:19:48.982Z" type="text-version" status="v 0.1.0" xml:id="UT22084-043-010-7">
+                    <desc>v 0.1.0</desc>
+                </change>
+                <change who="#john" when="2019-12-13T10:19:48.982Z" type="translation-status" status="3" xml:id="UT22084-043-010-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-05-11T08:48:24.545Z" type="translation-status" status="2.h" xml:id="UT22084-043-010-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-09T14:35:26.862Z" type="translation-status" status="2.g" xml:id="UT22084-043-010-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-09T14:35:26.862Z" type="text-version" status="0.1.1" xml:id="UT22084-043-010-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-09T14:37:03.558Z" type="text-version" status="0.1.2" xml:id="UT22084-043-010-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-02-05T07:22:22.143Z" type="translation-status" status="2.h" xml:id="UT22084-043-010-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-02-05T07:22:22.143Z" type="text-version" status="0.1.3" xml:id="UT22084-043-010-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-02-05T07:22:50.913Z" type="text-version" status="0.1.4" xml:id="UT22084-043-010-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T11:54:15.672Z" type="translation-status" status="2.g" xml:id="UT22084-043-010-16">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T11:54:15.672Z" type="text-version" status="0.1.5" xml:id="UT22084-043-010-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-06-30T12:15:08.691Z" type="text-version" status="0.1.6" xml:id="UT22084-043-010-18">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-13T08:26:08.501Z" type="translation-status" status="2.f" xml:id="UT22084-043-010-19">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-13T08:26:08.501Z" type="text-version" status="0.1.7" xml:id="UT22084-043-010-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-29T09:54:36.711Z" type="translation-status" status="2.e" xml:id="UT22084-043-010-21">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-29T09:54:36.711Z" type="text-version" status="0.1.8" xml:id="UT22084-043-010-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-29T09:55:19.232Z" type="text-version" status="0.1.9" xml:id="UT22084-043-010-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.1.10" xml:id="UT22084-043-010-24">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-29T15:08:14.368Z" type="translation-status" status="2.d" xml:id="UT22084-043-010-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-29T15:08:14.368Z" type="text-version" status="0.1.11" xml:id="UT22084-043-010-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
