--- a/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
+++ b/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
@@ -19,12 +19,12 @@
                 <editor role="copyEditor" xml:id="UT22084-054-007-28">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-054-007"/>
                 <date/>
             </publicationStmt>
@@ -87,6 +87,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-08T12:47:36.843Z" type="text-version" status="0.0.11" xml:id="UT22084-054-007-31">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-29T15:12:16.784Z" type="translation-status" status="2.c" xml:id="UT22084-054-007-32">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-29T15:12:16.784Z" type="text-version" status="0.0.12" xml:id="UT22084-054-007-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
