--- a/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
+++ b/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
@@ -7,10 +7,9 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra Dispelling the Darkness of the Ten Directions</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">daśadigandhakāravidhvaṃsanasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyogs bcu'i mun sel gyi mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">'phags pa phyogs bcu'i mun pa rnam par sel ba zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadaśadigandha­kāravidhvaṃsana­nāmamahāyānasūtra</title>
-                <author role="translatorMain" xml:id="UT22084-068-003-1"/>
-                <editor role="externalReviewer" xml:id="UT22084-068-003-2">Paul Harrison</editor>
+                <title type="otherTitle" xml:lang="Sa-Ltn">'phags pa phyogs bcu'i mun pa rnam par sel ba zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" xml:id="UT22084-068-003-1">Sakya Pandita Translation Group</author>
                 <editor role="projectEditor" xml:id="UT22084-068-003-3">Laura Goetz</editor>
                 <consultant role="dharmaMaster" xml:id="UT22084-068-003-4">Ven. Khenpo Kalsang Gyaltsen</consultant>
                 <author role="translatorEng" xml:id="UT22084-068-003-5">Ven. Khenpo Kalsang Gyaltsen</author>
@@ -18,14 +17,15 @@
                 <author role="translatorEng" xml:id="UT22084-068-003-7">Rev. Dr. Ani Kunga Chodron</author>
                 <editor role="projectEditor" xml:id="UT22084-068-003-8">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-068-003-30">Konchog Norbu</editor>
+                <editor role="projectEditor" xml:id="UT22084-068-003-43">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-068-003"/>
                 <date/>
             </publicationStmt>
@@ -88,6 +88,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-08T06:38:39.768Z" type="text-version" status="0.0.11" xml:id="UT22084-068-003-33">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-23T13:06:35.87Z" type="text-version" status="0.0.12" xml:id="UT22084-068-003-44">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-29T15:23:36.596Z" type="translation-status" status="2.b" xml:id="UT22084-068-003-45">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-29T15:23:36.596Z" type="text-version" status="0.0.13" xml:id="UT22084-068-003-46">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
