--- a/translations/kangyur/placeholders/101-147_toh1091-in_praise_of_the_goddess_raivati.xml
+++ b/translations/kangyur/placeholders/101-147_toh1091-in_praise_of_the_goddess_raivati.xml
@@ -12,11 +12,11 @@
                 <editor role="projectEditor" xml:id="UT22084-101-147-3">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-101-147"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +70,12 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-28T10:44:00.259Z" type="text-version" status="0.0.8" xml:id="UT22084-101-147-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T13:03:29.893Z" type="translation-status" status="2.c" xml:id="UT22084-101-147-17">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T13:03:29.893Z" type="text-version" status="0.0.9" xml:id="UT22084-101-147-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
