--- a/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
+++ b/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
@@ -17,12 +17,12 @@
                 <editor role="copyEditor" xml:id="UT22084-090-008-6">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-090-008"/>
                 <date/>
             </publicationStmt>
@@ -94,6 +94,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-18T08:13:48.324Z" type="text-version" status="0.0.11" xml:id="UT22084-090-008-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T14:02:31.838Z" type="translation-status" status="2.c" xml:id="UT22084-090-008-23">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T14:02:31.838Z" type="text-version" status="0.0.12" xml:id="UT22084-090-008-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
