--- a/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
+++ b/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
@@ -16,12 +16,12 @@
                 <editor role="copyEditor" xml:id="UT22084-090-010-6">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-090-010"/>
                 <date/>
             </publicationStmt>
@@ -87,6 +87,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-18T08:21:00.36Z" type="text-version" status="0.0.12" xml:id="UT22084-090-010-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-01T08:16:27.459Z" type="translation-status" status="2.c" xml:id="UT22084-090-010-24">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-01T08:16:27.459Z" type="text-version" status="0.0.13" xml:id="UT22084-090-010-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
