--- a/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
@@ -9,21 +9,22 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">nag po chen pa'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīmahākālatantra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal nag po chen pa'i rgyud/</title>
-                <author role="translatorMain" xml:id="UT22084-091-064-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-064-1">Dharmachakra Translation Committee</author>
                 <consultant role="projectManager" xml:id="UT22084-091-064-2">Andreas Doctor</consultant>
                 <author role="translatorEng" xml:id="UT22084-091-064-3">Adam Krug</author>
                 <editor role="reviser" xml:id="UT22084-091-064-4">Ryan Conlon</editor>
                 <consultant role="dharmaMaster" xml:id="UT22084-091-064-5">Chokyi Nyima Rinpoche</consultant>
                 <editor role="projectEditor" xml:id="UT22084-091-064-6">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-064-7">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-064-34">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.11 <date>2023</date>
+                <edition>v 0.1.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-091-064"/>
                 <date/>
             </publicationStmt>
@@ -95,6 +96,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-08T13:54:44.095Z" type="text-version" status="0.1.11" xml:id="UT22084-091-064-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-28T12:36:17.744Z" type="text-version" status="0.1.12" xml:id="UT22084-091-064-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T07:37:45.65Z" type="translation-status" status="2.b" xml:id="UT22084-091-064-36">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T07:37:45.65Z" type="text-version" status="0.1.13" xml:id="UT22084-091-064-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
