--- a/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
@@ -19,15 +19,16 @@
                 <consultant role="projectManager" xml:id="UT22084-039-003-6">Andreas Doctor</consultant>
                 <editor role="projectEditor" xml:id="UT22084-039-003-7">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-039-003-29">Konchog Norbu</editor>
+                <editor role="projectEditor" xml:id="UT22084-039-003-41">Nathaniel Rich</editor>
                 <sponsor xml:id="UT22084-039-003-8">Leo Tong Chen and his family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-039-003"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +91,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-25T07:35:26.782Z" type="text-version" status="0.0.11" xml:id="UT22084-039-003-32">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T10:08:06.536Z" type="text-version" status="0.0.12" xml:id="UT22084-039-003-42">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T08:12:03.902Z" type="translation-status" status="2.b" xml:id="UT22084-039-003-43">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T08:12:03.902Z" type="text-version" status="0.0.13" xml:id="UT22084-039-003-44">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
