--- a/translations/kangyur/placeholders/091-066_toh669,1086-the_incantation_of_mahakala_deliverance_from_all_epidemic_fevers.xml
+++ b/translations/kangyur/placeholders/091-066_toh669,1086-the_incantation_of_mahakala_deliverance_from_all_epidemic_fevers.xml
@@ -7,23 +7,24 @@
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Mahākāla, Deliverance from All Epidemic Fevers</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">nag po chen po'i gzungs rims nad las thar byed/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nag po chen po'i gzungs/ rims nad thams cad las thar bar byed pa/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nag po chen po'i gzungs rims nad thams cad las thar bar byed pa/</title>
-                <author role="translatorMain" xml:id="UT22084-091-066-1"/>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nag po chen po'i gzungs/ rims nad thams cad las thar bar byed pa/</title>
+                <author role="translatorMain" xml:id="UT22084-091-066-1">Dharmachakra Translation Committee</author>
                 <consultant role="projectManager" xml:id="UT22084-091-066-2">Andreas Doctor</consultant>
                 <consultant role="dharmaMaster" xml:id="UT22084-091-066-3">Chokyi Nyima Rinpoche</consultant>
                 <author role="translatorEng" xml:id="UT22084-091-066-4">Adam Krug</author>
                 <editor role="reviser" xml:id="UT22084-091-066-5">Andreas Doctor</editor>
                 <editor role="projectEditor" xml:id="UT22084-091-066-6">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-066-7">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-066-34">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.11 <date>2023</date>
+                <edition>v 0.1.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-066"/>
                 <date/>
             </publicationStmt>
@@ -104,6 +105,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-08T13:56:49.14Z" type="text-version" status="0.1.11" xml:id="UT22084-091-066-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-28T12:38:09.204Z" type="text-version" status="0.1.12" xml:id="UT22084-091-066-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T09:19:35.247Z" type="translation-status" status="2.a" xml:id="UT22084-091-066-36">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T09:19:35.247Z" type="text-version" status="0.1.13" xml:id="UT22084-091-066-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
