--- a/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -20,12 +20,12 @@
                 <editor role="projectEditor" xml:id="UT22084-091-067-34">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.13 <date>2023</date>
+                <edition>v 0.1.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-067"/>
                 <date/>
             </publicationStmt>
@@ -115,6 +115,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-05T07:41:21.536Z" type="text-version" status="0.1.13" xml:id="UT22084-091-067-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T09:20:39.435Z" type="translation-status" status="2.a" xml:id="UT22084-091-067-38">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T09:20:39.435Z" type="text-version" status="0.1.14" xml:id="UT22084-091-067-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
