--- a/translations/kangyur/placeholders/059-010_toh167-the_sutra_of_the_questions_of_vikurvanaraja.xml
+++ b/translations/kangyur/placeholders/059-010_toh167-the_sutra_of_the_questions_of_vikurvanaraja.xml
@@ -10,19 +10,20 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryavikurvāṇarāja­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rnam par 'phrul pa'i rgyal pos zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《自在王菩薩經》</title>
-                <author role="translatorMain" ref="contributors.xml#team-11"/>
-                <author role="translatorEng" ref="contributors.xml#person-14">David Jackson, Dr.</author>
-                <editor role="finalReviewer" ref="contributors.xml#person-230">Tom Tillemans</editor>
-                <editor role="externalReviewer" ref="contributors.xml#person-262">David Higgins</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-14">David Jackson, Dr.</consultant>
-                <sponsor ref="sponsors.xml#sponsor-198">Nomura Shin, Biao Dong and Ozer Dong</sponsor>
+                <author role="translatorMain" xml:id="UT22084-059-010-1">David Jackson</author>
+                <author role="translatorEng" xml:id="UT22084-059-010-2">David Jackson</author>
+                <editor role="projectEditor" xml:id="UT22084-059-010-3">Tom Tillemans</editor>
+                <editor role="externalReviewer" xml:id="UT22084-059-010-4">David Higgins</editor>
+                <consultant role="projectManager" xml:id="UT22084-059-010-5">David Jackson</consultant>
+                <sponsor xml:id="UT22084-059-010-6">Nomura Shin, Biao Dong and Ozer Dong</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-059-010"/>
                 <date/>
             </publicationStmt>
@@ -30,8 +31,8 @@
                 <bibl key="toh167" type="text">
                     <ref>Toh 167</ref>
                     <biblScope/>
-                    <author role="translatorTib">t. Prajñāvarman</author>
-                    <author role="translatorTib">ye shes sde</author>
+                    <author role="translatorTib" xml:id="UT22084-059-010-19">t. Prajñāvarman</author>
+                    <author role="translatorTib" xml:id="UT22084-059-010-20">ye shes sde</author>
                     <location work="UT4CZ5369" count-pages="71">
                         <volume number="59" start-page="350" end-page="420"/>
                     </location>
@@ -39,14 +40,39 @@
                     <idno source-id="O1JC114941JC11772" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T06:14:58.989Z" user="admin">26/07/2022 06:14:58</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:11:12.247Z" user="mike">2.f</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-13T13:35:38.852Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2020-10-14T15:30:02.192Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-26T06:14:56.981Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-059-010-7">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#mike" when="2020-01-27T13:11:12.247Z" type="translation-status" status="2.f" xml:id="UT22084-059-010-8">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#amy" when="2020-10-13T13:35:38.852Z" type="text-version" status="0.0.2" xml:id="UT22084-059-010-9">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2020-10-14T15:30:02.192Z" type="text-version" status="0.0.3" xml:id="UT22084-059-010-10">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T06:14:56.981Z" type="text-version" status="0.0.4" xml:id="UT22084-059-010-11">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-059-010-12">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-07T12:49:06.038Z" type="text-version" status="0.0.6" xml:id="UT22084-059-010-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-07T13:07:40.482Z" type="text-version" status="0.0.7" xml:id="UT22084-059-010-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T07:57:33.291Z" type="translation-status" status="2.g" xml:id="UT22084-059-010-23">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T07:57:33.291Z" type="text-version" status="0.0.8" xml:id="UT22084-059-010-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
