--- a/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
+++ b/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
@@ -8,20 +8,21 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rgyud 'od zer can gyi rtog pa brgya phrag bdun pa/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyud stong phrag bcu gnyis pa las mchog tu yang snying por gyur pa'i 'od zer can gyi rtog pa brgya phrag bdun pa phyung ba/</title>
-                <author role="translatorMain" xml:id="UT22084-090-010-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-010-1">Dharmachakra Translation Committee</author>
                 <author role="translatorEng" xml:id="UT22084-090-010-2">Adam Krug</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-090-010-3">Chokyi Nyima Rinpoche</consultant>
                 <consultant role="projectManager" xml:id="UT22084-090-010-4">Andreas Doctor</consultant>
                 <editor role="projectEditor" xml:id="UT22084-090-010-5">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-090-010-6">Laura Goetz</editor>
+                <editor role="projectEditor" xml:id="UT22084-090-010-32">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.15 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-090-010"/>
                 <date/>
             </publicationStmt>
@@ -93,6 +94,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-01T08:16:27.459Z" type="text-version" status="0.0.13" xml:id="UT22084-090-010-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-01T08:17:02.128Z" type="text-version" status="0.0.14" xml:id="UT22084-090-010-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T08:09:18.103Z" type="translation-status" status="2.b" xml:id="UT22084-090-010-34">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T08:09:18.103Z" type="text-version" status="0.0.15" xml:id="UT22084-090-010-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
