--- a/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
@@ -23,12 +23,12 @@
                 <sponsor xml:id="UT22084-039-003-8">Leo Tong Chen and his family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-039-003"/>
                 <date/>
             </publicationStmt>
@@ -100,6 +100,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-06T08:12:03.902Z" type="text-version" status="0.0.13" xml:id="UT22084-039-003-44">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T10:15:21.319Z" type="translation-status" status="2.a" xml:id="UT22084-039-003-45">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T10:15:21.319Z" type="text-version" status="0.0.14" xml:id="UT22084-039-003-46">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
