--- a/translations/kangyur/translations/034-014_toh26-the_perfection_of_wisdom_for_suryagarbha.xml
+++ b/translations/kangyur/translations/034-014_toh26-the_perfection_of_wisdom_for_suryagarbha.xml
@@ -8,8 +8,7 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Sūryagarbha­prajñā­pāramitā</title>
                 <title type="mainTitle" xml:lang="bo">ཤེར་ཕྱིན་ཉི་མའི་སྙིང་པོ།</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin nyi ma’i snying po</title>
-                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Sūryagarbha
-                    Perfection of Wisdom”</title>
+                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Sūryagarbha Perfection of Wisdom”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­prajñā­pāramitā­sūryagarbhamahāyāna­sūtra</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་ཉི་མའི་སྙིང་པོ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin pa
@@ -28,7 +27,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-014-124">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -167,6 +166,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-08-29T12:00:03.185Z" type="text-version" status="1.0.0" xml:id="UT22084-034-014-127">
                     <desc>First published version</desc>
+                </change>
+                <change who="#andre" when="2023-09-11T20:18:23.123Z" type="text-version" status="1.0.1" xml:id="UT22084-034-014-128">
+                    <desc>Glossary revised - activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -450,7 +452,7 @@
                     Buddha, 2022.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded">
+            <div type="glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-034-014-19">
@@ -515,16 +517,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-034-014-25">
+                        <gloss xml:id="UT22084-034-014-25" type="term" mode="match">
                             <term type="translationMain">insight</term>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">vipaśyanā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">lhag mthong</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ལྷག་མཐོང་།</term>
-                            <note type="definition">
-                                <p>An important form of Buddhist meditation
-                                focusing on developing insight into the nature of phenomena. Often
-                                presented as one of a pair of meditation techniques, the other being
-                                “calm abiding.”</p>
+                            <note type="definition" rend="override">
+                                <p>An important form of Buddhist meditation focusing on developing insight into the nature of phenomena. Often presented as one of a pair of meditation techniques, the other being “calm abiding.”</p>
                             </note>
                         </gloss>
                     </item>
