--- a/translations/kangyur/translations/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
+++ b/translations/kangyur/translations/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-016-131">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.1 <date>2023</date>
+                <edition>v 1.1.2 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -192,6 +192,9 @@
                 </change>
                 <change who="#john" when="2023-09-08T17:00:35.234Z" type="text-version" status="1.1.1" xml:id="UT22084-034-016-137">
                     <desc>Some edits to intro and opening phrase with its notes.</desc>
+                </change>
+                <change who="#andre" when="2023-09-11T20:58:51.814Z" type="text-version" status="1.1.2" xml:id="UT22084-034-016-138">
+                    <desc>Glossary matching revised - activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -538,7 +541,7 @@
                         2002.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded">
+            <div type="glossary">
                 <list type="glossary">
                     <item>
                     </item>
@@ -567,8 +570,8 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-034-016-60">
-                            <term type="translationMain">the essence of Dharma</term>
+                        <gloss xml:id="UT22084-034-016-60" type="term" mode="match">
+                            <term type="translationMain">essence of Dharma</term>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">dharmagarbha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">chos kyi snying po</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཆོས་ཀྱི་སྙིང་པོ།</term>
@@ -578,9 +581,8 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-034-016-61">
-                            <term type="translationMain">the display of the nonconceptuality of all phenomena</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified"/>
+                        <gloss xml:id="UT22084-034-016-61" type="term" mode="match">
+                            <term type="translationMain">display of the nonconceptuality of all phenomena</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">chos thams cad rnam par mi rtog pa bstan pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཆོས་ཐམས་ཅད་རྣམ་པར་མི་རྟོག་པ་བསྟན་པ།</term>
                             <note type="definition">
