--- a/translations/kangyur/placeholders/034-023_toh35-sutra_on_maitreya.xml
+++ b/translations/kangyur/placeholders/034-023_toh35-sutra_on_maitreya.xml
@@ -10,7 +10,7 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">[maitreyasūtra]</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -45,6 +45,9 @@
                 </change>
                 <change who="#john" when="2023-09-15T11:41:17.405Z" type="text-version" status="0.0.5" xml:id="UT22084-034-023-5">
                     <desc>User set version to 0.0.5</desc>
+                </change>
+                <change who="#john" when="2023-09-15T12:17:35.319Z" type="text-version" status="0.0.6" xml:id="UT22084-034-023-6">
+                    <desc>User set version to 0.0.6</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
